DUnion.GeneratorTests/TestCases/SubTyped/Valid/CaseClass.source.cs
using DUnion;

namespace SubTyped.Valid.CaseClass;

[DUnion(Kind = UnionKind.SubType)]
public partial class Union
{
    public partial class Case
    {
    }
}